优化代码，删除多余部分及优化 swagger 注释
