# code/docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
+        "description": "详情见源码地址：https://github.com/fmw666/microservice-code-sample/tree/monolithic-app.",
+        "title": "单体应用 swagger-ui API 文档",
         "contact": {},
         "version": "1.0"
     },
@@ -44,9 +44,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "description": "{\"code\":0,\"data\":{},\"message\":\"\"}",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schema.Response"
                         }
                     }
                 }
@@ -78,7 +78,7 @@
                     "200": {
                         "description": "{\"code\":0,\"data\":{},\"message\":\"\"}",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schema.Response"
                         }
                     }
                 }
@@ -112,7 +112,7 @@
                     "200": {
                         "description": "{\"code\":0,\"data\":{},\"message\":\"\"}",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schema.Response"
                         }
                     }
                 }
@@ -155,9 +155,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\":0,\"data\":{}}",
+                        "description": "{\"code\":0,\"data\":{},\"message\":\"\"}",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schema.Response"
                         }
                     }
                 }
@@ -197,7 +197,7 @@
                     "200": {
                         "description": "{\"code\":0,\"data\":{},\"message\":\"\"}",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schema.Response"
                         }
                     }
                 }
@@ -231,7 +231,7 @@
                     "200": {
                         "description": "{\"code\":0,\"data\":{},\"message\":\"\"}",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schema.Response"
                         }
                     }
                 }
@@ -265,6 +265,20 @@
                 }
             }
         },
+        "schema.PageInfo": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "schema.RegisterReq": {
             "type": "object",
             "required": [
@@ -281,6 +295,23 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "schema.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "any"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "page_info": {
+                    "$ref": "#/definitions/schema.PageInfo"
                 }
             }
         },
